--- a/public_html/templates/image.html
+++ b/public_html/templates/image.html
@@ -1,8 +1,8 @@
-<!--<form class="form-horizontal" name="imageUpload" (submit)="uploadImage();">-->
-	<!--<div class="form-group">-->
-		<!--<label for="image" class="modal-labels">Upload an image</label>-->
-		<!--<input type="file" name="image" id="image" ng2FileSelect [uploader]="uploader" />-->
-	<!--</div>-->
-	<!--<button type="submit" class="btn btn-info btn-lg"><i class="fa fa-file-image-o" aria-hidden="true"></i> Upload Image</button>-->
-<!--</form>-->
-<!--<p>Cloudinary Public Id: {{ cloudinarySecureUrl }}</p>-->
+<form class="form-horizontal" name="imageUpload" (submit)="uploadImage();">
+	<div class="form-group">
+		<label for="image" class="modal-labels">Upload an image</label>
+		<input type="file" name="image" id="image" ng2FileSelect [uploader]="uploader" />
+	</div>
+	<button type="submit" class="btn btn-info btn-lg"><i class="fa fa-file-image-o" aria-hidden="true"></i> Upload Image</button>
+</form>
+<p>Cloudinary Public Id: {{ cloudinarySecureUrl }}</p>
